# rpc-example

./: Cargo.toml  README.md  build.rs
proto/: job.proto
src/: client.rs  server.rs
src/web/: routes.rs  structs.rs
static/: index.html  main.js  stylesheet.css
tmp/: README.md  config
