[package]
name = "job-search"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "job-search-server"
path = "src/server.rs"

[[bin]]
name = "job-search-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.21", features = ["rt-multi-thread","macros"]}
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-web-lab = "0.18.2"

[build-dependencies]
tonic-build = "0.8"
