[package]
name = "job-search"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "job-search-server"
path = "src/server.rs"

[[bin]]
name = "job-search-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tonic-health = "0.7.1"
tokio = { version = "1.21", features = ["rt-multi-thread","macros"]}
futures-util = "0.3.24"
sanitize-filename = "0.4"
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-web-lab = "0.18.2"
uuid = { version = "1.1.2", features = ["v4"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[build-dependencies]
tonic-build = "0.8"
